# egorovamin

./: Dockerfile  README.md  docker-compose.yml  docker_clear.sh  manage.py  pyproject.toml  users_data.csv
config/: .env_copy  services.py  wait-for-it.sh
database/: export_to_csv.py  fill_db.py  models.py
database/mailing/: requests.py
database/resources/: requests.py
database/users/: requests.py
keyboards/: admin_commands.py  base_commands.py
reminders/: reminders.py
routers/: __init__.py
routers/commands/: __init__.py  admin_commands.py  admin_sender.py  admin_states.py  base_commands.py  base_states.py  base_validation.py  callbacks.py  check_preview.py
